# ibex_imaging_knowledge_base_utilities

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  create_release_notes.py  environment_dev.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: main.yml
src/ibex_imaging_knowledge_base_utilities/: argparse_types.py  bib2md.py  create_draft_release_notes.py  csv_2_supporting.py  data_software_csv_2_md.py  datadict_glossary_2_contrib_md.py  fluorescent_probes_csv_2_md.py  protocols_csv_2_md.py  reagent_resources_csv_2_md_url.py  update_index_md_stats.py  url_exists.py  utilities.py  validate_zenodo_json.py  videos_csv_2_md.py  zenodo_json_2_thewho_md.py
src/ibex_imaging_knowledge_base_utilities/data_validation/: utilities.py  validate_basic.py  validate_bib.py  validate_fluorescent_probes.py  validate_image_resources.py  validate_reagent_resources.py  validate_videos.py  validate_zenodo_json.py  validation_utilities.py
src/ibex_imaging_knowledge_base_utilities/md_generation/: bib2md.py  data_software_csv_2_md.py  datadict_glossary_2_contrib_md.py  fluorescent_probes_csv_2_md.py  protocols_csv_2_md.py  reagent_resources_csv_2_md_url.py  update_index_md_stats.py  videos_csv_2_md.py  zenodo_json_2_thewho_md.py
tests/: test_scripts.py
tests/data/: data_and_software.md.in  datasets.csv  duplicate_key.bib  fluorescent_probes_duplicates.csv  fluorescent_probes_leading_trailing_whitespace.csv  image_resources.csv  image_resources_partial.csv  index.md.in  missing_key.bib  pino_plos.md  publications.bib  radtke_nat_prot.md  radtke_pnas.md  reagent_batch.csv  reagent_resources.csv  reagent_resources.json  software.csv  syntax_error.bib  vendor_urls.json  videos.csv  videos_with_unexpected_orcid.csv  zenodo.json  zenodo_duplicate_contributor.json  zenodo_missing_orcid.json
